--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,7 +5,7 @@
         <button class="headbtn2" id="professorbtn">Professor</button>
         <button class="headbtn3" id="adminbtn">admin</button>
       <div class="user-login-form">
-       <h2 class="textual">User Login</h2>
+       <h1 class="textual">User Login</h1>
         <form #userloginform="ngForm" (ngSubmit)="loginUser()">
           <small class="text-danger"><b>{{msg}}</b></small>
             <div class="form-group">
@@ -30,7 +30,7 @@
             <div *ngIf="password.errors && password.invalid && password.touched">
               <small class="text-danger" *ngIf="password.errors.required"><b>required field</b></small>
             </div>
-            <small style="color: gray; font-size: 10px;">atleast one uppercase, numeric digit, lowercase, special character, length of 6-20</small>
+            <small style="color: rgb(217, 212, 212); font-size: 10px;">atleast one uppercase, numeric digit, lowercase, special character, length of 6-20</small>
           </div>
     
           <div class="checkbox" style="margin-top: 5px;">
