--- a/src/app/components/welcomepage/welcomepage.component.css
+++ b/src/app/components/welcomepage/welcomepage.component.css
@@ -12,7 +12,7 @@
 }
 .header
 {
-	background-color: #851313;
+	background-color: #16091e;
 	position: relative;
 	height: 500px;
 	width: 100%;
@@ -117,7 +117,7 @@ li:hover{
 } 
 .text h1
 {
-	color: #fff;
+	color: #060202;
 	font-family: 'Stick', sans-serif;
     font-size: 45px;
 }
@@ -219,17 +219,19 @@ background: linear-gradient(to top, #ff9933 0%, #ff6600 100%);
 	width: 100%;
 	z-index: 100;
 	transform: translateY(-80px);
+	
 }
 .body .body1 img,.body2 img,.body3 img{
 	height: 80px;
 	width: 80px;
 	margin-top: 15px;
+	
 }
 .body1{
 	display: flex;
 	align-items: center;
 	flex-direction: column;
-	background: #fff;
+	background: #150505;
 	margin: 0 5px;
 	border-radius: 20px;
 	padding: 20px;
