payment gateway added and forget password added

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -11,7 +11,7 @@
     padding: 15px 15px 15px 30px;
     font-size: 20px;
     text-align: right;
-    background-color: #851313;
+    background-color: #0f1329;
     width: 100%;
   }
   .logoutbtn{
