--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,7 +6,7 @@
         <button class="headbtn2" id="professorbtn">Professor</button>
         <button class="headbtn3" id="adminbtn">admin</button>
       <div class="user-login-form">
-       <h2 class="textual">User Login</h2>
+       <h1 class="textual">User Login</h1>
         <form #userloginform="ngForm" (ngSubmit)="loginUser()">
           <small class="text-danger"><b>{{msg}}</b></small>
             <div class="form-group">
@@ -31,16 +31,17 @@
             <div *ngIf="password.errors && password.invalid && password.touched">
               <small class="text-danger" *ngIf="password.errors.required"><b>required field</b></small>
             </div>
-            <small style="color: gray; font-size: 10px;">atleast one uppercase, numeric digit, lowercase, special character, length of 6-20</small>
+            <small style="color: rgb(217, 212, 212); font-size: 10px;">atleast one uppercase, numeric digit, lowercase, special character, length of 6-20</small>
           </div>
     
           <div class="checkbox" style="margin-top: 5px;">
             <small style="color: gray;"><input type="checkbox" name="remember"> Remember me</small>
-            <small style="color: navy; margin-left: 42%; cursor: pointer;">forgot password?</small>
+            <small [routerLink]="['/resetpassword']" style="color: navy; margin-left: 35%; cursor: pointer;">forgot password?</small>
           </div>
           <button [disabled]="userloginform.form.invalid" type="submit" class="btn loginbtn">Login</button>
         </form>
-        <div class="sign-up" style=" text-align: center; margin-top: 10px;">Don't have an Account? <small [routerLink]="['/registration']" style="color: navy; text-align: center; cursor: pointer;"><b>Create One</b></small></div>
+        <div class="sign-up" style=" text-align: center; margin-top: 10px;">Don't have an Account? 
+          <small [routerLink]="['/registration']" style="color: navy; text-align: center; cursor: pointer;"><b>Create One</b></small></div>
         <hr>
         <p class="text-center mt-3"><b> or Login with </b></p>
             <div class="text-center">
@@ -84,7 +85,7 @@
          
                <div class="checkbox" style="margin-top: 5px;">
                  <small style="color: gray;"><input type="checkbox" name="remember"> Remember me</small>
-                 <small style="color: navy; margin-left: 42%; cursor: pointer;">forgot password?</small>
+                 <small [routerLink]="['/resetpassword']"style="color: navy; margin-left: 35%; cursor: pointer;">forgot password?</small>
                </div>
                <button [disabled]="professorloginform.form.invalid" type="submit" class="btn loginbtn">Login</button>
              </form>
