--- a/src/app/components/welcomepage/welcomepage.component.html
+++ b/src/app/components/welcomepage/welcomepage.component.html
@@ -12,17 +12,18 @@
     </div>
     <div class="main">
     	<div class="text">
-    		<h1 style="margin-left: -10%; font-family: Verdana;">ELearning Management System</h1><br>
-    		<h4 style="font-family: monospace; font-weight: bolder; margin-left: -8%; color: rgb(248, 247, 247);">Developed by - Quantumsoft</h4><br><br>
+
+    		<h1 style="margin-left: -10%;color: rgb(249, 237, 246); font-family: Verdana;">E-Learning Management System</h1><br>
+    		<h4 style="font-family: monospace; font-weight: bolder; margin-left: -8%; color: rgb(124, 73, 73);">Developed by - QUANTUMSOFT PVT LIMITED</h4><br><br>
+
     	</div><br>
-      <img class="floating" id="img3" [src]="'assets/img/lms-bg.png'">
+     // <img class="floating" id="img3" [src]="'assets/img/lms-bg.png'">//
     </div>
   </div>
   <br>
 </div>
 <br><br>
-<marquee class="marquee" direction="left">🔔 Stay Home !!! Stay Safe !!! Lets Fight together against COVID-19. This Elearning Management system is designed by Gowthamraj K. If Already our Customer, please Login to see your Current Learning Status 😀 </marquee>
-
+<marquee class="marquee" direction="Right">🔔 "QUANTUMSOFT SE PADHO AAGE BADHO" </marquee>
 <section id="about" class="about about-bg">
   <div class="about-container">
       <div class="subtext1" id="subtext1"><span class="counter">01</span> &nbsp;User Friendly Learning Portal<i id="subtext1" class="fa fa-caret-down"></i></div>
@@ -30,7 +31,7 @@
   </div>
   <div class="about-container">
         <div class="subtext1" id="subtext2"><span class="counter">02</span> &nbsp;Three Different Modes<i id="subtext2" class="fa fa-caret-down"></i></div>
-        <div class="innertext1" id="innertext2">This elearning Portal has three different modes of working as <b style="color:darkblue; font-size: larger; font-weight: bolder;">ADMIN, PROFESSOR & USER.</b> Each of them can access to their respective features and perform their task accordingly. (by default, the ADMIN will be <b style="color: darkgreen; font-size: larger; font-weight: bolder;">GowthamRaj K </b><b style="color: darkred;">(portal creator)</b></div>
+        <div class="innertext1" id="innertext2">This elearning Portal has three different modes of working as <b style="color:darkblue; font-size: larger; font-weight: bolder;">ADMIN, PROFESSOR & USER.</b> Each of them can access to their respective features and perform their task accordingly. (by default, the ADMIN will be <b style="color: darkgreen; font-size: larger; font-weight: bolder;"> </b><b style="color: darkred;">(portal creator)</b></div>
   </div>
   <div class="about-container">
         <div class="subtext1" id="subtext3"><span class="counter">03</span> &nbsp;Specific Learning Contents<i id="subtext3" class="fa fa-caret-down"></i></div>
@@ -40,7 +41,9 @@
         <div class="subtext1" id="subtext4"><span class="counter">04</span> &nbsp;Plug-In Play Embedded video lectures<i id="subtext4" class="fa fa-caret-down"></i></div>
         <div class="innertext1" id="innertext4"><b style="color: darkgreen; font-size: larger; font-weight: bolder;">Video based lectures</b> are also divided into <b style="color: darkgreen; font-size: larger; font-weight: bolder;">chapters</b> as per the instructors and users are facilitated to learn as an embedded video lecture in our <b style="color: maroon; font-size: large; font-weight: bolder;">custom video player.</b> You can also <b style="color: darkblue; font-size: medium; font-weight: bolder;">take notes, download resources, ask queries and give feedback about the course.</b></div>
   </div><br>
-  <img class="automation" [src]="'assets/img/portalimg.gif.png'" width="470" height="420">
+
+ // <img class="automation" [src]="'assets/img/portalimg.gif.gif'" width="470" height="420">
+
 </section>
 
 <main id="main">
@@ -53,7 +56,7 @@
         <div class="details">
           <div class="detail_1" (click)="navigate()" style="background-color: rgb(19, 104, 97); margin-right: 5%;">
             <h2 style="font-weight: bolder; font-size: 35px;font-family: monospace; margin-top: 5%; color: white;"> Admin </h2>
-            <div class="circle" style="border-radius: 50%; background-color: white; padding: 10%;">
+            <div class="circle" style="border-radius: 50%; background-color: rgb(244, 234, 234); padding: 10%;">
                 <img [src]="'assets/img/admin.png'" width="130" height="130">
             </div>
           </div>
