registration,welcomepage,header,login

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,9 @@
      
     <b class="sidebar-text" style="color: whitesmoke;"><i class="fa fa-user"></i> Welcome {{loggedUser}}</b>
      
-    <button class="logoutbtn" (click)="logout()"><i class="fa fa-sign-out"></i> Logout</button>
+    <!-- <button class="logoutbtn" (click)="logout()"><i class="fa fa-sign-out"></i> Logout</button> -->
+
+    <button class="logoutbtn" (click)="confirmLogout()"><i class="fa fa-sign-out"></i> Logout</button>
     <!-- <button class="log" (click) ="welcome()"><i class="fa fa-sign-out"></i> Welcome</button> -->
     <!-- <button class="fa fa-home" (click)="navigateHome">New</button> -->
      
