--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -1,4 +1,3 @@
-
 <div class="container register">
 
     <div class="row">
@@ -81,15 +80,14 @@
                     </div>
                     <div class="checkbox" style="margin-top: -8%; margin-left: 11%;">
                         
-                        <small style="color: gray;"><input type="checkbox"[(ngModel)]="termsAndConditionsChecked" class="checkbox" name="remember" required> I agree to all ?
-                            <small [routerLink]="['/termcondition']" style="color: navy; text-align: center; cursor: pointer;"><b> Terms & Conditions</b></small>
-                            </small>
+                        <small style="color: gray;"><input type="checkbox"[(ngModel)]="termsAndConditionsChecked" class="checkbox" name="remember" required> I agree to all?
+                            <small [routerLink]="['/login']" style="color: navy; text-align: center; cursor: pointer;"><b>terms and Conditions</b></small>
+                        </small>
                     </div>
                     <div style="margin-top: -3%; margin-left: 58.5%; margin-bottom: 3%; color: rgb(0, 0, 0); font-size: 16px;">Already have an Account? 
                         <small [routerLink]="['/login']" style="color: navy; text-align: center; cursor: pointer;"><b>click here</b></small>
                     </div>
                     <button [disabled]="userform.form.invalid"[disabled]="!termsAndConditionsChecked" (click)="registerUser()" type="submit" class="btnRegister">Register</button>
-                    
                 </form>
                 </div>
                 <div class="tab-pane fade show" id="profile" role="tabpanel" aria-labelledby="profile-tab">
@@ -169,7 +167,9 @@
                         </div>
                     </div>
                     <div class="checkbox" let  style="margin-top: -8%; margin-left: 11%;">
-                        <small style="color: gray;"><input type="checkbox" [(ngModel)]="termsAndConditionsChecked" class="checkbox" name="remember" required> I agree to all Terms & Conditions</small>
+                        <small style="color: gray;"><input type="checkbox" [(ngModel)]="termsAndConditionsChecked" class="checkbox" name="remember" required> I agree to all ?
+                            <small [routerLink]="['/login']" style="color: navy; text-align: center; cursor: pointer;"><b>terms and Conditions</b></small>
+                        </small>
                     </div>
                     <div style="margin-top: -3%; margin-left: 58.5%; margin-bottom: 3%; color: rgb(0, 0, 0); font-size: 16px;">Already have an Account? 
                         <small [routerLink]="['/login']" style="color: navy; text-align: center; cursor: pointer;"><b>click here</b></small>
@@ -180,6 +180,4 @@
             </div>
         </div>
     </div>
-    
-
-</div>				                            
+</div>
